# rust-dedupe

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: workflow.rs
src/: align.rs  audio.rs  cluster.rs  config.rs  extract.rs  file_hash.rs  frame_hash.rs  image_hash.rs  lib.rs
tests/: cluster.rs  image_hash.rs  parity_alignment.rs  parity_audio.rs  parity_frame_hash.rs  properties.rs
